istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookstore-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookstore-routing
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/bookstore-gateway
  http:
  # Route 1: Catalog API
  - match:
    - uri:
        prefix: /api/catalog
    route:
    - destination:
        host: catalog-service
        port:
          number: 8000

  # Route 2: Rating API
  - match:
    - uri:
        prefix: /api/ratings
    route:
    - destination:
        host: rating-service
        port:
          number: 80

  # Route 3: Review API (Canary, Timeouts, and Retries!)
  - match:
    - uri:
        prefix: /api/reviews
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream
    timeout: 5s
    route:
    - destination:
        host: review-service
        subset: v1
      weight: 80  # <--- 80% of traffic goes to basic reviews
    - destination:
        host: review-service
        subset: v2
      weight: 20  # <--- 20% goes to the sentiment analysis
        
  # Route 4: React Frontend
  - route:
    - destination:
        host: frontend
        port:
          number: 80
